# test-miden0.7

./: Brewfile  Cargo.toml
air/: Cargo.toml
air/src/: proof.rs
assembly/: Cargo.toml
core/: Cargo.toml
core/src/stack/: inputs.rs  outputs.rs
core/src/utils/: mod.rs
crypto/: Cargo.toml  build.rs
crypto/PQClean/: .gitattributes
crypto/benches/: store.rs
crypto/src/: lib.rs
crypto/src/hash/rpo/: digest.rs
crypto/src/merkle/partial_mt/: mod.rs
crypto/src/merkle/store/: mod.rs
crypto/src/merkle/tiered_smt/: mod.rs  values.rs
crypto/src/utils/: mod.rs
miden/: Cargo.toml  index.html  origin.Cargotoml
miden/src/: lib.rs  main2.rs
processor/: Cargo.toml
processor/src/host/: mod.rs
processor/src/host/advice/: providers.rs
prover/: Cargo.toml
stdlib/: Cargo.toml
test-utils/: Cargo.toml
verifier/: Cargo.toml
winterfell/air/: Cargo.toml
winterfell/air/src/: options.rs
winterfell/air/src/air/: trace_info.rs
winterfell/air/src/proof/: commitments.rs  context.rs  mod.rs  ood_frame.rs  queries.rs
winterfell/fri/: Cargo.toml
winterfell/fri/src/: proof.rs
winterfell/math/: .cargo_vcs_info.json  Cargo.toml
winterfell/math/src/: lib.rs
winterfell/math/src/field/f64/: mod.rs
