[package]
name = "miden-core"
version = "0.7.0"
description = "Miden VM core components"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std", "serde/std"]
concurrent = ["math/concurrent"]
std = ["miden-crypto/std",  "winter-utils/std", "serde/std"]
sve = ["miden-crypto/sve", "std"]

[dependencies]
math = { package = "winter-math", path = "../winterfell/math", version = "0.6"}
miden-crypto = { package = "miden-crypto", path = "../crypto", version = "0.7", default-features = false }
winter-crypto = { package = "winter-crypto", path = "../winterfell/crypto", version = "0.6", default-features = false }
winter-utils = { package = "winter-utils", path = "../winterfell/utils/core", version = "0.6", default-features = false }
serde = { version = "1.0.117", default-features = false, features = ["derive"]}
serde_derive = {version = "1.0.117", default-features = false, optional = true}

[dev-dependencies]
proptest = "1.1"
rand_utils = { version = "0.6",path = "../winterfell/utils/rand", package = "winter-rand-utils" }
