[package]
name = "miden-crypto"
version = "0.7.1"
description = "Miden Cryptographic primitives"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/crypto"
documentation = "https://docs.rs/miden-crypto/0.7.1"
categories = ["cryptography", "no-std"]
keywords = ["miden", "crypto", "hash", "merkle"]
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
executable = ["dep:rand_utils", "std"]
# serde = ["dep:serde", "serde?/alloc"]
std = ["blake3/std", "dep:cc", "dep:libc", "winter_crypto/std", "winter_math/std", "winter_utils/std"]
sve = ["std"]

[dependencies]
blake3 = { version = "1.5", default-features = false }
clap = { version = "4.4", features = ["derive"], optional = true }
libc = { version =  "0.2", default-features = false, optional = true }
rand_utils = { version = "0.6", path = "../winterfell/utils/rand", package = "winter-rand-utils", optional = true }
serde = { version = "1.0", features = [ "derive" ], default-features = false}
winter_crypto = { version = "0.6", path = "../winterfell/crypto", package = "winter-crypto", default-features = false }
winter_math = { version = "0.6", path = "../winterfell/math", package = "winter-math", default-features = false }
winter_utils = { version = "0.6", path = "../winterfell/utils/core", package = "winter-utils", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
rand_utils = { version = "0.6",path = "../winterfell/utils/rand", package = "winter-rand-utils" }


[build-dependencies]
cc = { version = "1.0", features = ["parallel"], optional = true }
glob = "0.3"
